--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
